# LifeAfterLife_core

./: .dockerignore  .env.example  Dockerfile  README.md  create_LAL_DB_PG_.sql  legacy_create_LAL_DB_PG_.sql  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  security.py
app/db/: crud.py  database.py
app/models/: graph.py  kinship.py  person.py  relationship.py  tree.py  user.py
app/routes/: __init__.py  auth.py  graph.py  kinship.py  persons.py  relationships.py  trees.py
app/services/: auth_throttle_service.py  graph_service.py  kinship_service.py  permissions.py  person_service.py  relationship_semantics.py  relationship_service.py  tree_access_service.py  tree_service.py
app/utils/: __init__.py
migrations/: 2026_04_09_auth_throttle_entries.sql  2026_04_09_explicit_delete_contracts.sql  2026_04_09_refresh_token_flow.sql  2026_04_09_refresh_token_rotation_family.sql  2026_04_09_tree_access_role_hardening.sql
tests/: __init__.py  test_api_integration.py  test_config.py  test_crud.py  test_graph_service.py  test_kinship_service.py  test_permissions.py  test_relationship_semantics.py  test_relationship_service.py  test_security.py  test_tree_access_validation.py
