[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeafterlife-core"
version = "0.1.0"
description = "FastAPI backend for the LifeAfterLife project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg==0.31.0",
    "email-validator==2.3.0",
    "fastapi==0.135.3",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "uvicorn==0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
